...
            "state" : "translated",
            "value" : "FFmpeg 無法轉換 「%@」。"
          }
        }
      }
    },
    "File" : {
      "comment" : "The media file, as a section heading and a tab",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ملف"
...
            "state" : "translated",
            "value" : "影格速率"
          }
        }
      }
    },
    "Front Row" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Front Row"
          }
...
            "state" : "translated",
            "value" : "目前沒有播放媒體。"
          }
        }
      }
    },
    "No Recent Files" : {
      "comment" : "Placeholder shown when there are no recent files",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "لا توجد ملفات حديثة"
...
            "state" : "translated",
            "value" : "好"
          }
        }
      }
    },
    "Open File..." : {
      "comment" : "Show the open file dialog",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "فتح الملف..."
...
            "state" : "translated",
            "value" : "打開檔案⋯"
          }
        }
      }
    },
    "Open Recent" : {
      "comment" : "Title of the Open Recent submenu",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "فتح الأحدث"
...
            "state" : "translated",
            "value" : "打開最近使用過的項目"
          }
        }
      }
    },
    "Open URL..." : {
      "comment" : "Show the open URL dialog",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "فتح الرابط..."
...
            "state" : "translated",
            "value" : "暫停"
          }
        }
      }
    },
    "Play" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تشغيل"
          }
...
            "state" : "translated",
            "value" : "播放空間音訊範例"
          }
        }
      }
    },
    "Playback" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تشغيل"
          }
...
            "state" : "translated",
            "value" : "傳送意見回饋"
          }
        }
      }
    },
    "Show in Finder" : {
      "comment" : "Show the currently playing file in Finder",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "إظهار في الباحث"
...
            "state" : "translated",
            "value" : "尺寸"
          }
        }
      }
    },
    "Skip Interval" : {
      "comment" : "How many seconds to go forward or backward",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تخطي الفاصل الزمني"
...
            "state" : "translated",
            "value" : "網站"
          }
        }
      }
    },
    "Welcome to Front Row" : {
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "مرحبًا بك في Front Row"
          }
...
